crates/djls-semantic/tests/snapshots/corpus__repos__djangopackages.org__homepage__templatetags__grid_of_the_week_tag.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "homepage.templatetags.grid_of_the_week_tag::tag::grid_of_the_week":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
filter_arities: {}
block_specs: {}
